<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TableLayout
            android:id="@+id/bmi_chart_table"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow>

                <TextView
                    android:layout_weight="6"
                    android:text="@string/bmi"
                    android:textStyle="bold" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" />

                <TextView
                    android:layout_weight="6"
                    android:text="@string/status"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_weight="6"
                    android:text="@string/less_than_or_equal_to_18.4" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" />

                <TextView
                    android:layout_weight="6"
                    android:text="@string/underweight" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_weight="6"
                    android:text="@string/between_18.5_and_24.9" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" />

                <TextView
                    android:layout_weight="6"
                    android:text="@string/normal" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_weight="6"
                    android:text="@string/between_25_and_39.9" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" />

                <TextView
                    android:layout_weight="6"
                    android:text="@string/overweight" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_weight="6"
                    android:text="@string/greater_than_or_equal_to_40.0" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" />

                <TextView
                    android:layout_weight="6"
                    android:text="@string/obese" />
            </TableRow>


        </TableLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/weight_textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/weight_in_kg"
            android:paddingVertical="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bmi_chart_table">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/weight_textInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColorHint="#757575" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/height_linear_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/weight_textInputLayout"
            app:layout_constraintTop_toBottomOf="@id/weight_textInputLayout">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/height_in_feet_textInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:hint="@string/height_in_ft"
                android:paddingBottom="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/height_in_feet_textInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textColorHint="#757575" />

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/height_in_inch_textInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:hint="@string/height_in_in"
                android:paddingBottom="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/height_in_inch_textInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textColorHint="#757575" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>


        <Button
            android:id="@+id/calculate_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp"
            android:text="@string/calculate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/height_linear_layout"
            app:layout_constraintTop_toBottomOf="@id/height_linear_layout" />

        <TextView
            android:id="@+id/bmi_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/calculate_button"
            tools:text="Your BMI is 27.7 (Over weight)" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>

